--- a/index.html
+++ b/index.html
@@ -11,7 +11,35 @@
 
 <body>
 <!--Add your HTML here-->
-
+	<div class="box">
+		<div class="display"><input type="text" readonly size="18" id"d">
+		</div>
+<div class="keys">
+	<p>
+				<input type="button" class="button">
+				<input type="button" class="button">
+				<input type="button" class="button">
+				<input type="button" class="button">
+	</p>
+			<p>
+				<input type="button" class="button">
+				<input type="button" class="button">
+				<input type="button" class="button">
+				<input type="button" class="button">
+			</p>
+			<p>
+				<input type="button" class="button">
+				<input type="button" class="button">
+				<input type="button" class="button">
+				<input type="button" class="button">
+			</p>
+			<p>
+				<input type="button" class="button">
+				<input type="button" class="button">
+				<input type="button" class="button">
+				<input type="button" class="button">
+			</p>
+		</div>
 
 
 
