--- a/index.html
+++ b/index.html
@@ -16,28 +16,34 @@
 		</div>
 <div class="keys">
 	<p>
-				<input type="button" class="button">
-				<input type="button" class="button">
-				<input type="button" class="button">
-				<input type="button" class="button">
+				<input type="button" class="button"	value="mrc" onClick="alert('Not yet implemented')">
+				<input type="button" class="button" value="m-" onClick="alert('Not yet implemented')">
+				<input type="button" class="button" value="m+" onClick="alert('Not yet implemented')">
+				<input type="button" class="button" value="/" onClick="v('/')">
 	</p>
 			<p>
-				<input type="button" class="button">
-				<input type="button" class="button">
-				<input type="button" class="button">
-				<input type="button" class="button">
+				<input type="button" class="button" value="7" onClick="v('7')">
+				<input type="button" class="button" value="8" onClick="v('8')">
+				<input type="button" class="button" value="9" onClick="v('9')">
+				<input type="button" class="button" value="*" onClick="v('*')">
 			</p>
 			<p>
-				<input type="button" class="button">
-				<input type="button" class="button">
-				<input type="button" class="button">
-				<input type="button" class="button">
+				<input type="button" class="button" value="4" onClick="v('4')">
+				<input type="button" class="button" value="5" onClick="v('5')">
+				<input type="button" class="button" value="6" onClick="v('6')">
+				<input type="button" class="button" value="-" onClick="v('-')">
 			</p>
 			<p>
-				<input type="button" class="button">
-				<input type="button" class="button">
-				<input type="button" class="button">
-				<input type="button" class="button">
+				<input type="button" class="button" value="1" onClick="v('1')">
+				<input type="button" class="button" value="2" onClick="v('2')">
+				<input type="button" class="button" value="3" onClick="v('3')">
+				<input type="button" class="button" value="+" onClick="v('+')">
+			</p>
+			<p>
+				<input type="button" class="button" value="0" onClick="v('0')">
+				<input type="button" class="button" value="." onClick="v('.')">
+				<input type="button" class="button" value="C" onClick="d'C')">
+				<input type="button" class="button" value="=" onClick="e()">
 			</p>
 		</div>
 
