Correction for HTML, Javascript and Css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 <!--Stylesheet-->
 <link rel="stylesheet" type="text/css" href="calculator.css">
 <!--JavaScript-->
-<script type="text/javascript" src="calculator.js"></script>
+
+<script type="text/javascript" src="calculator.js">
+
+</script>
 </head>
 
 <body>
