--- a/index.html
+++ b/index.html
@@ -6,49 +6,48 @@
 <!--Stylesheet-->
 <link rel="stylesheet" type="text/css" href="calculator.css">
 <!--JavaScript-->
-
-<script type="text/javascript" src="calculator.js">
-
-</script>
+<script type="text/javascript" src="calculator.js"></script>
 </head>
 
 <body>
 <!--Add your HTML here-->
 	<div class="box">
-		<div class="display"><input type="text" readonly size="18" id"d">
+		<div class="display">
+			<input type="text" readonly size="18" id="d">
 		</div>
-<div class="keys">
-	<p>
-				<input type="button" class="button"	value="mrc" onClick="alert('Not yet implemented')">
-				<input type="button" class="button" value="m-" onClick="alert('Not yet implemented')">
-				<input type="button" class="button" value="m+" onClick="alert('Not yet implemented')">
-				<input type="button" class="button" value="/" onClick="v('/')">
-	</p>
+		<div class="keys">
 			<p>
-				<input type="button" class="button" value="7" onClick="v('7')">
-				<input type="button" class="button" value="8" onClick="v('8')">
-				<input type="button" class="button" value="9" onClick="v('9')">
-				<input type="button" class="button" value="*" onClick="v('*')">
+				<input type="button" value="mrc" class="button function" onClick="">
+				<input type="button" value="m-" class="button function" onClick="">
+				<input type="button" value="m+" class="button function" onClick="">
+				<input type="button" value="/" class="button operator" onClick="v('/')">
 			</p>
 			<p>
-				<input type="button" class="button" value="4" onClick="v('4')">
-				<input type="button" class="button" value="5" onClick="v('5')">
-				<input type="button" class="button" value="6" onClick="v('6')">
-				<input type="button" class="button" value="-" onClick="v('-')">
+				<input type="button" value="7" class="button number" onClick="v('7')">
+				<input type="button" value="8" class="button number" onClick="v('8')">
+				<input type="button" value="9" class="button number" onClick="v('9')">
+				<input type="button" value="*" class="button operator" onClick="v('*')">
 			</p>
 			<p>
-				<input type="button" class="button" value="1" onClick="v('1')">
-				<input type="button" class="button" value="2" onClick="v('2')">
-				<input type="button" class="button" value="3" onClick="v('3')">
-				<input type="button" class="button" value="+" onClick="v('+')">
+				<input type="button" value="4" class="button number" onClick="v('4')">
+				<input type="button" value="5" class="button number" onClick="v('5')">
+				<input type="button" value="6" class="button number" onClick="v('6')">
+				<input type="button" value="-" class="button operator" onClick="v('-')">
 			</p>
 			<p>
-				<input type="button" class="button" value="0" onClick="v('0')">
-				<input type="button" class="button" value="." onClick="v('.')">
-				<input type="button" class="button" value="C" onClick="d'C')">
-				<input type="button" class="button" value="=" onClick="e()">
+				<input type="button" value="1" class="button number" onClick="v('1')">
+				<input type="button" value="2" class="button number" onClick="v('2')">
+				<input type="button" value="3" class="button number" onClick="v('3')">
+				<input type="button" value="+" class="button operator" onClick="v('+')">
+			</p>
+			<p>
+				<input type="button" value="0" class="button number" onClick="v('0')">
+				<input type="button" value="." class="button number" onClick="v('.')">
+				<input type="button" value="C" class="button function" onClick="d('')">
+				<input type="button" value="=" class="button operator" onClick="e()">
 			</p>
 		</div>
+	</div>
 
 
 
