add more columns, more buttons and the Pi function

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <!--Stylesheet-->
 <link rel="stylesheet" type="text/css" href="calculator.css">
 <!--JavaScript-->
-<script type="text/javascript" src="calculator.js"></script>
+<script type="text/javascript" src="calculator.js">
+
+</script>
 </head>
 
 <body>
@@ -27,6 +29,7 @@
 				<input type="button" value="8" class="button number" onClick="v('8')">
 				<input type="button" value="9" class="button number" onClick="v('9')">
 				<input type="button" value="*" class="button operator" onClick="v('*')">
+				<input type="button" value="" class="button operator" onClick="v('')">
 			</p>
 			<p>
 				<input type="button" value="4" class="button number" onClick="v('4')">
@@ -43,6 +46,7 @@
 			<p>
 				<input type="button" value="0" class="button number" onClick="v('0')">
 				<input type="button" value="." class="button number" onClick="v('.')">
+				<input type="button" value="π" class="button number" onClick="v(Math.PI)">
 				<input type="button" value="C" class="button function" onClick="d('')">
 				<input type="button" value="=" class="button operator" onClick="e()">
 			</p>
