--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
 				<input type="button" value="7" class="button number" onClick="v('7')">
 				<input type="button" value="8" class="button number" onClick="v('8')">
 				<input type="button" value="9" class="button number" onClick="v('9')">
+				<input type="button" value="π" class="button number" onClick="v(Math.PI)">
 				<input type="button" value="*" class="button operator" onClick="v('*')">
-				<input type="button" value="" class="button operator" onClick="v('')">
 			</p>
 			<p>
 				<input type="button" value="4" class="button number" onClick="v('4')">
 				<input type="button" value="5" class="button number" onClick="v('5')">
 				<input type="button" value="6" class="button number" onClick="v('6')">
+				<input type="button" value="e" class="button number" onClick="v(Math.E)">
 				<input type="button" value="-" class="button operator" onClick="v('-')">
 			</p>
 			<p>
@@ -48,7 +49,6 @@
 				<input type="button" value="." class="button number" onClick="v('.')">
 				<input type="button" value="π" class="button number" onClick="v(Math.PI)">
 				<input type="button" value="C" class="button function" onClick="d('')">
-				<input type="button" value="=" class="button operator" onClick="e()">
 			</p>
 		</div>
 	</div>
