added part of preventing multiple decimals and changed background color

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 		</div>
 		<div class="keys">
 			<p>
-				<input type="button" value="mrc" class="button function" onClick="">
-				<input type="button" value="m-" class="button function" onClick="">
-				<input type="button" value="m+" class="button function" onClick="">
+				<input type="button" value="mrc" class="button function" onClick="alert('not inplemented.')">
+				<input type="button" value="m-" class="button function" onClick="alert('not inplemented.')">
+				<input type="button" value="m+" class="button function" onClick="alert('not inplemented.')">
+				<input type="button" value="light" class="button operator" onClick="c">
 				<input type="button" value="/" class="button operator" onClick="v('/')">
 			</p>
 			<p>
